samples/_failures_safe/1761417380_580caa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78964c4e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_78964c4e.c:166:9: error: expected expression at end of input
  166 |         case TOKEN_IDENTIFIER: return
      |         ^~~~
./samples/SAFE/__tmp_78964c4e.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78964c4e.c:166:9: error: expected declaration or statement at end of input
